--- a/index.html
+++ b/index.html
@@ -402,6 +402,12 @@
         </div>
     </div>
 </footer>
+<div class="backdrop">
+    <div class="modal">
+        <button type="button" class="modal-open" >X
+        </button>
+    </div>
+</div>
 </body>
 
 </html>
