--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
     </div>
 </footer>
-<div class="backdrop">
+<div class="backdrop is-open">
     <div class="modal">
         <button type="button" class="modal-open" >
         <svg class="" width="8" height="8">
@@ -439,10 +439,16 @@
             </div>
             </div>
             <div class="modal-field">
-            <div class="modal-field">
             <label for="user-comment" class="modal-label">Comment</label>
-            <textarea name="user-comment" class="modal-textarea" id="user-comment"           placeholder="Text input"></textarea>
+            <textarea name="user-comment" class="modal-textarea" id="user-comment" placeholder="Text input"></textarea>
             </div>
+            <div class="modal-field">
+                <input type="checkbox" name="policy" id="policy" class="modal-check" value="true" />
+                <label for="policy" class="modal-check-text" ><span>
+                    <svg class="modal-check-icon" width="10" height="8">
+                        <use href="./images/icons.svg#icon-checkbox-gal"></use>
+                    </svg>
+                </span> I accept the terms and conditions of the Privacy Policy </label>
             </div>
             <button type="submit">Send</button>
         </form>
