--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
 <div class="backdrop is-open">
     <div class="modal">
         <button type="button" class="modal-open" >
-        <svg class="" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black-x"></use>
+        <svg class="modal-open-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-x" ></use>
         </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -438,7 +438,7 @@
             </svg>
             </div>
             </div>
-            <div class="modal-field">
+            <div class="modal-field comment-field">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea name="user-comment" class="modal-textarea" id="user-comment" placeholder="Text input"></textarea>
             </div>
