--- a/index.html
+++ b/index.html
@@ -443,14 +443,15 @@
             <textarea name="user-comment" class="modal-textarea" id="user-comment" placeholder="Text input"></textarea>
             </div>
             <div class="modal-field">
-                <input type="checkbox" name="policy" id="policy" class="modal-check" value="true" />
-                <label for="policy" class="modal-check-text" ><span>
+                <input type="checkbox" name="user-privacy" id="user-privacy" class="modal-check visually-hidden" value="true" />
+                <label for="user-privacy" class="modal-check-text" ><span class="modal-checkbox-accept">
                     <svg class="modal-check-icon" width="10" height="8">
                         <use href="./images/icons.svg#icon-checkbox-gal"></use>
                     </svg>
-                </span> I accept the terms and conditions of the Privacy Policy </label>
+                </span> I accept the terms and conditions of theI accept the terms and conditions of the 
+                <a href="#" class="modal-privacy-link" target="_blank">Privacy Policy</a> </label>
             </div>
-            <button type="submit">Send</button>
+            <button type="submit" class="form-submit-btn">Send</button>
         </form>
     </div>
 </div>
