--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea name="user-comment" class="modal-textarea" id="user-comment" placeholder="Text input"></textarea>
             </div>
-            <div class="modal-field">
+            <div class="modal-field modal-checkbox-field">
                 <input type="checkbox" name="user-privacy" id="user-privacy" class="modal-check visually-hidden" value="true" />
                 <label for="user-privacy" class="modal-check-text" ><span class="modal-checkbox-accept">
                     <svg class="modal-check-icon" width="10" height="8">
