--- a/index.html
+++ b/index.html
@@ -400,6 +400,22 @@
                 </li>
             </ul>
         </div>
+        <div>
+            <div class="form-subscribe-container">
+                <p class="subscribe-text">Subscribe</p>
+                <form class="subscribe-form" style="display: flex; gap: 24px;">
+                    <label class="form-label-subscribe">
+                        <input type="email" name="user-email" placeholder="E-mail" class="email-input-subscribe" required />
+                    </label>
+                    <button type="submit" class="submit-button-subscribe">
+                        Subscribe
+                        <svg width="24" height="24" class="button-icon-subscribe" >
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+        </div>
     </div>
 </footer>
 <div class="backdrop is-open">
