--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
             <div class="form-subscribe-container">
                 <p class="subscribe-text">Subscribe</p>
-                <form class="subscribe-form" style="display: flex; gap: 24px;">
+                <form class="subscribe-form" >
                     <label class="form-label-subscribe">
                         <input type="email" name="user-email" placeholder="E-mail" class="email-input-subscribe" required />
                     </label>
@@ -416,6 +416,7 @@
         </div>
     </div>
 </footer>
+
 <div class="backdrop is-open">
     <div class="modal">
         <button type="button" class="modal-open" >
@@ -462,7 +463,7 @@
                     <svg class="modal-check-icon" width="10" height="8">
                         <use href="./images/icons.svg#icon-checkbox-gal"></use>
                     </svg>
-                </span> I accept the terms and conditions of theI accept the terms and conditions of the 
+                </span> I accept the terms and conditions of the 
                 <a href="#" class="modal-privacy-link" target="_blank">Privacy Policy</a> </label>
             </div>
             <button type="submit" class="form-submit-btn">Send</button>
