--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <label for="user-name" class="modal-label">Name</label>
             <div class="input-wrapper">
             <input type="text" name="user-name" class="modal-input" id="user-name" />
-            <svg class="modal-icon" width="18" height="24">
+            <svg class="modal-icon person-light" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
             </svg>
             </div>
